Flyway added to io-crypto